--- a/iOs/Podfile
+++ b/iOs/Podfile
@@ -3,9 +3,10 @@
 
 target 'ChatKeepcoding' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
-  use_frameworks!
+  # use_frameworks!
 
 # Pods for ChatKeepcoding
   pod 'MessageKit'
+  pod 'Scaledrone', '~> 0.3.0'
 
 end
