Carga las imágenes de los mensajes en Cloud Storage de Firebase. Muestra las imágenes en el chat con ayuda del pod Kingfisher.

--- a/iOs/Podfile
+++ b/iOs/Podfile
@@ -9,6 +9,8 @@ target 'ChatKeepcoding' do
   pod 'Firebase/Auth'
   pod 'Firebase/Database'
   pod 'FirebaseUI/Database'
+  pod 'FirebaseStorage'
+  pod 'Kingfisher'
   
   
   post_install do |installer|
