Implementación de Crashlytics.

--- a/iOs/Podfile
+++ b/iOs/Podfile
@@ -12,6 +12,8 @@ target 'ChatKeepcoding' do
   pod 'FirebaseStorage'
   pod 'Kingfisher'
   pod 'Firebase/Messaging'
+  pod 'Fabric', '~> 1.9.0'
+  pod 'Crashlytics', '~> 3.12.0'
   
   
   post_install do |installer|
